--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,47 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>LineUp</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <style>
-    body {
-      background: #0d0d0d;
-      color: #fff;
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 20px;
-      height: 100vh;
-      overflow-y: auto;
+    * { box-sizing: border-box; margin:0; padding:0; }
+    html, body { height: 100%; width: 100%; font-family: sans-serif; background: #0d0d0d; color: #fff; }
+    #app { display: flex; flex-direction: column; height: 100%; }
+    h2 { margin-bottom: 10px; }
+    button { 
+      background: #2b7dfa; border: none; color: #fff; padding: 8px 12px; border-radius: 6px; cursor: pointer;
     }
-    h1 { margin: 10px 0; }
-    #queue-list { width: 100%; max-width: 400px; }
+    button:hover { background: #4793ff; }
     .queue-item {
-      background: #1b1b1b;
-      border-radius: 10px;
-      margin: 10px 0;
-      padding: 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      display: flex; justify-content: space-between; align-items: center;
+      background: #1b1b1b; padding: 10px; border-radius: 10px; margin-bottom: 10px;
     }
-    button {
-      background: #2b7dfa;
-      border: none;
-      color: #fff;
-      padding: 5px 10px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #4793ff;
-    }
+    .queue-item div { flex:1; margin-right:10px; }
+    /* нижняя панель вкладок */
+    #tabs { position: fixed; bottom:0; left:0; right:0; display:flex; background:#111; border-top:1px solid #222; height:50px; }
+    #tabs div { flex:1; text-align:center; line-height:50px; cursor:pointer; color:#888; }
+    #tabs .active { color:#2b7dfa; font-weight:bold; }
+    /* контент сверху */
+    #content { flex:1; overflow-y:auto; padding:10px 15px 60px; } /* padding-bottom чтобы не заезжала под вкладки */
+    /* ставка кнопки */
+    .stake-button { flex:1; margin-right:5px; padding:8px; border-radius:6px; background:#333; color:#fff; cursor:pointer; }
+    .stake-button.active { background:#2b7dfa; }
+    .stakes { display:flex; margin-bottom:10px; gap:5px; }
   </style>
 </head>
 <body>
-  <h1>LineUp</h1>
-  <div id="queue-list"></div>
+  <div id="app">
+    <div id="content">
+      <!-- сюда будет рендерить main.js -->
+    </div>
+    <div id="tabs">
+      <!-- вкладки будут через main.js -->
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
